# jibiki

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEEP_SEARCH.md  Makefile  NOTICE.md  PRODUCT.md  README.md  TODO.md  compose.override.yaml  compose.production.yaml  compose.yaml
server/: .dockerignore  Dockerfile  OBSERVABILITY.md  manage.py  pyproject.toml
server/accounts/: admin.py  apps.py  entitlements.py  languages.py  models.py  serializers.py  signals.py  urls.py  views.py
server/content_sources/: README.md
server/contentpacks/: apps.py  builder.py  manifest.py  schema.py  urls.py  views.py
server/dictionary/: admin.py  content_urls.py  content_views.py  models.py  pack_schema.py  search.py  seed_data.py  seed_strokes.py  serializers.py  urls.py  views.py
server/feedback/: admin.py  models.py  serializers.py  views.py
server/integrations/: models.py  serializers.py  services.py  urls.py  views.py
server/jibiki_server/: settings.py  settings_test.py  urls.py  wsgi.py
server/mnemonics/: admin.py  apps.py  imaging.py  models.py  seeding.py  seeds.py  serializers.py  services.py  urls.py  views.py
server/srs/: admin.py  decks.py  fsrs.py  models.py  optimize.py  serializers.py  services.py  sync.py  urls.py  views.py
server/tests/: conftest.py  test_active_mnemonics.py  test_auth.py  test_auth_frontend_flows.py  test_content.py  test_decks.py  test_dictionary.py  test_entitlements.py  test_feedback.py  test_fsrs.py  test_fsrs_vectors.py  test_integrations.py  test_languages.py  test_mnemonic_decks.py  test_mnemonics.py  test_observability.py  test_origins.py  test_packs.py  test_seed_kana_mnemonics.py  test_seed_kanji_mnemonics.py  test_seed_kanji_readings.py  test_srs.py  test_stage2.py  test_sync.py
(+428 files in other folders)
